--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "test": "nodejs tests/serverTest.js"
   },
   "dependencies": {
-   },
+    "os-homedir": "~1.0.1",
+    "express": "~4.13.4",
+    "helmet": "~1.3.0",
+    "body-parser": "~1.15.0"
+  },
   "engines": {
     "nodejs": "0.10.25"
   },
@@ -16,10 +20,6 @@
     "type": "git",
     "url": "https://github.com/normola/plantmonitor-esp"
   },
-  "keywords": [
-    "node",
-    "heroku",
-    "esp"
-  ],
+  "keywords": [],
   "license": "MIT"
 }
