--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "~1.15.0"
   },
   "engines": {
-    "nodejs": "0.10.25"
+    "nodejs": "0.10.25",
+    "node": "0.10.25"
   },
   "repository": {
     "type": "git",
